Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56962

qtwebview failed build on Windows Phone

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.9.0 Alpha
    • 5.9.0 Alpha
    • WebView
    • None
    • WinRT
    • fdfa61d21b09adeb1bc2e975966c7433194f3cb3

    Description

      https://codereview.qt-project.org/#/c/176004/
      http://testresults.qt.io/logs/qt/qtwebview/dc160869c73a9e2cdc4746a0da474e9198a35668/WindowsWindows_8_1x86_64WinPhoneWindows_Phone_8_1armv4MSVC2013qtci-windows-8-x86_64-b40ec6DebugAndRelease_Release_DisableTests/0e6d4df3b9d157b4c07b38c5d0c34dd96c41fe07/buildlog.txt.gz

      	cl -c -FIQtWebViewDepends -YuQtWebViewDepends -Fp.pch\release\Qt5WebView_pch.pch -nologo -FS -O2 -MD -D_HAS_EXCEPTIONS=0 -GR -W3 -w34100 -w34189 -w44996 -DUNICODE -DWIN32 -DQT_LARGEFILE_SUPPORT -DQ_BYTE_ORDER=Q_LITTLE_ENDIAN -DWINAPI_FAMILY=WINAPI_FAMILY_PHONE_APP -DARM -D__ARM__ -D__ARM__ -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_WEBVIEW_LIB -DQT_BUILDING_QT -D_CRT_SECURE_NO_WARNINGS -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DNDEBUG -D_WINDLL -I. -I. -I..\..\include -I..\..\include\QtWebView -I..\..\include\QtWebView\5.9.0 -I..\..\include\QtWebView\5.9.0\QtWebView -Itmp -Ic:\Users\qt\work\install\include\QtQuick\5.9.0 -Ic:\Users\qt\work\install\include\QtQuick\5.9.0\QtQuick -Ic:\Users\qt\work\install\include\QtGui\5.9.0 -Ic:\Users\qt\work\install\include\QtGui\5.9.0\QtGui -Ic:\Users\qt\work\install\include\QtQml\5.9.0 -Ic:\Users\qt\work\install\include\QtQml\5.9.0\QtQml -Ic:\Users\qt\work\install\include\QtCore\5.9.0 -Ic:\Users\qt\work\install\include\QtCore\5.9.0\QtCore -Ic:\Users\qt\work\install\include -Ic:\Users\qt\work\install\include\QtQuick -Ic:\Users\qt\work\install\include\QtGui -Ic:\Users\qt\work\install\include\QtANGLE -Ic:\Users\qt\work\install\include\QtQml -Ic:\Users\qt\work\install\include\QtNetwork -Ic:\Users\qt\work\install\include\QtCore -I.moc\release -Ic:\Users\qt\work\install\mkspecs\winphone-arm-msvc2013 -Fo.obj\release\ @C:\Users\qt\AppData\Local\Temp\qtwebviewfunctions.obj.2228.28266.jom
      qtwebviewfunctions.cpp
      qwebview.cpp
      c:\Users\qt\work\install\include\QtCore/qobjectdefs_impl.h(249) : error C2027: use of undefined type 'QVariant'
              c:\Users\qt\work\install\include\QtCore/qmetatype.h(1888) : see declaration of 'QVariant'
              c:\Users\qt\work\install\include\QtCore/qobjectdefs_impl.h(250) : see reference to class template instantiation 'QtPrivate::AreArgumentsCompatible<QVariant,QVariant>::AreArgumentsNarrowed' being compiled
              c:\Users\qt\work\install\include\QtCore/qobjectdefs_impl.h(266) : see reference to class template instantiation 'QtPrivate::AreArgumentsCompatible<QVariant,QVariant>' being compiled
              c:\Users\qt\work\install\include\QtCore/qobjectdefs_impl.h(267) : see reference to class template instantiation 'QtPrivate::CheckCompatibleArguments<QtPrivate::List<const QVariant &>,QtPrivate::List<const QVariant &>>' being compiled
              c:\Users\qt\work\install\include\QtCore/qobject.h(235) : see reference to class template instantiation 'QtPrivate::CheckCompatibleArguments<QtPrivate::List<int,const QVariant &>,QtPrivate::List<int,const QVariant &>>' being compiled
              qwebview.cpp(55) : see reference to function template instantiation 'QMetaObject::Connection QObject::connect<void(__cdecl QWebViewPrivate::* )(int,const QVariant &),void(__cdecl QWebView::* )(int,const QVariant &)>(const QWebViewPrivate *,Func1,const QWebView *,Func2,Qt::ConnectionType)' being compiled
              with
              [
                  Func1=void (__cdecl QWebViewPrivate::* )(int,const QVariant &)
      ,            Func2=void (__cdecl QWebView::* )(int,const QVariant &)
              ]
              c:\Users\qt\work\install\include\QtCore/qmetatype.h(1888) : see declaration of 'QVariant'
      qquickwebview.cpp
      Generating Code...
      jom: C:\Users\qt\work\qt\qtwebview\src\webview\Makefile.Release [.obj\release\qtwebviewfunctions.obj] Error 2
      JobClient destroyed while still acquiring.
      jom: C:\Users\qt\work\qt\qtwebview\src\webview\Makefile [release-all] Error 2

      Attachments

        For Gerrit Dashboard: QTBUG-56962
        # Subject Branch Project Status CR V

        Activity

          People

            mkalinow Maurice Kalinowski
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes