winrt: Fix compilation

Change-Id: Ib07b8cd02a87d664437d80b51e304be5a8e09554
Task-number: QTBUG-56962
Reviewed-by: Andrew Knight <andrew.knight@intopalo.com>
Reviewed-by: Peng Wu <peng.wu@intopalo.com>
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>